assert(current_query_index < process_query_set->size) failed: invariant

XMLWordPrintable

    • Type: Bug
    • Resolution: Fixed
    • Priority: P2
    • 11
    • Affects Version/s: 11
    • Component/s: hotspot
    • None
    • svc
    • b17
    • x86_64
    • windows

        Test: vmTestbase/nsk/monitoring/ThreadMXBean/ThreadInfo/RunningThread/RunningThread004/TestDescription.java

        ----------System.out:(33/1462)*----------
        Started recording 1. No limit specified, using maxsize=250MB as default.

        Use JFR.dump name=1 filename=FILEPATH to copy recording data to file.
        Stress time: 60 seconds
        Stress iterations factor: 1
        Stress threads factor: 1
        Stress runs factor: 1
        Max memory: 3900702720
        Sleep time: 500
        Iterations: 0
        Number of threads: 16
        Seed: 1526505695596
        Run GC thread: false
        Run mem diag thread: false
        Run forever: false
        # To suppress the following error report, specify this argument
        # after -XX: or in .hotspotrc: SuppressErrorAt=t:/workspace/open/src/hotspot/os/windows/os_perf_windows.cpp:378
        #
        # A fatal error has been detected by the Java Runtime Environment:
        #
        # Internal Error (t:/workspace/open/src/hotspot/os/windows/os_perf_windows.cpp:378), pid=13320, tid=44408
        # assert(current_query_index < process_query_set->size) failed: invariant
        #
        # JRE version: Java(TM) SE Runtime Environment (11.0) (fastdebug build 11-internal+0-jdk11-jdk.543)
        # Java VM: Java HotSpot(TM) 64-Bit Server VM (fastdebug 11-internal+0-jdk11-jdk.543, mixed mode, tiered, compressed oops, g1 gc, windows-amd64)
        # Core dump will be written. Default location: T:\\testoutput\\jtreg\\JTwork\\scratch\\0\\hs_err_pid13320.mdmp
        #
        # An error report file with more information is saved as:
        # T:\\testoutput\\jtreg\\JTwork\\scratch\\0\\hs_err_pid13320.log
        #
        # If you would like to submit a bug report, please visit:
        # http://bugreport.java.com/bugreport/crash.jsp
        #
        ----------System.err:(0/0)----------

              Assignee:
              Markus Grönlund
              Reporter:
              Sandeep Konchady
              Votes:
              0 Vote for this issue
              Watchers:
              4 Start watching this issue

                Created:
                Updated:
                Resolved: