8203321: assert(current_query_index < process_query_set->size) failed: invariant

Reviewed-by: rehn